--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Backend challenge for Jump2Digital Event",
   "main": "app.js",
   "scripts": {
-    "start": "node ./src/app.js",
-    "dev": "nodemon ./src/app.js",
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/eduardferre/Jump2Digital_Hackaton_Backend#readme",
   "dependencies": {
+    "cors": "2.8.5",
     "express": "4.18.2",
     "picocolors": "1.0.0",
     "zod": "3.22.4"
