--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": "2.8.5",
     "express": "4.18.2",
     "morgan": "1.10.0",
+    "mysql2": "3.6.3",
     "picocolors": "1.0.0",
     "zod": "3.22.4"
   },
